--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,16 @@
   }
 }
 
+@theme {
+  --font-work-sans: "Work Sans", sans-serif;
+}
+
+@layer utilities {
+  .heading {
+    @apply uppercase bg-black px-6 py-3 font-work-sans font-extrabold text-white sm:text-[54px] sm:leading-[64px] text-[36px] leading-[46px] max-w-5xl text-center my-5;
+  }
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
