tailwindcss v4 auto aupgrade pre-time

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,10 +23,8 @@
   --font-work-sans: "Work Sans", sans-serif;
 }
 
-@layer utilities {
-  .heading {
-    @apply uppercase bg-black px-6 py-3 font-work-sans font-extrabold text-white sm:text-[54px] sm:leading-[64px] text-[36px] leading-[46px] max-w-5xl text-center my-5;
-  }
+@utility heading {
+  @apply uppercase bg-black px-6 py-3 font-work-sans font-extrabold text-white sm:text-[54px] sm:leading-[64px] text-[36px] leading-[46px] max-w-5xl text-center my-5;
 }
 
 body {
