--- a/app/globals.css
+++ b/app/globals.css
@@ -27,15 +27,15 @@
 }
 
 @theme {
-  --color-primary-100: "#FFE8F0";
-  --color-primary: "#EE2B69";
-  --color-secondary: "#FBE843";
-  --color-black-100: "#333333";
-  --color-black-200: "#141413";
-  --color-black-300: "#7D8087";
-  --color-black: "#000000";
-  --color-white-100: "#F7F7F7";
-  --color-white: "#FFFFFF";
+  --color-primary-100: #ffe8f0;
+  --color-primary: #ee2b69;
+  --color-secondary: #fbe843;
+  --color-black-100: #333333;
+  --color-black-200: #141413;
+  --color-black-300: #7d8087;
+  --color-black: #000000;
+  --color-white-100: #f7f7f7;
+  --color-white: #ffffff;
 
   /* border radius */
   --radius-lg: "var(--radius)";
