--- a/app/globals.css
+++ b/app/globals.css
@@ -57,7 +57,7 @@
 
 @theme {
   --color-primary-100: #ffe8f0;
-  --color-primary: #ee2b69;
+  --color-primary: #ffc240;
   --color-secondary: #fbe843;
   --color-black-100: #333333;
   --color-black-200: #141413;
