global.css updated

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
 }
 @layer base {
   * {
-   
+    @apply border-r-black-100 outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
