--- a/app/globals.css
+++ b/app/globals.css
@@ -67,7 +67,7 @@
 @theme {
   --color-primary-100: #ffe8f0;
   --color-primary: #ffc240;
-  --color-secondary: #fbe843;
+  --color-secondary: #9780ff;
   --color-black-100: #333333;
   --color-black-200: #141413;
   --color-black-300: #7d8087;
